--- a/index.html
+++ b/index.html
@@ -15,33 +15,35 @@
   <body>
 <div class="container">
   <!-- navbar -->
-  <div class="navbar-atas">
-    <div class="navbar navbar-expand-lg navbar-light">
-      <a href="index.html" class="navbar-brand"><img src="images/header.PNG" alt=""> </a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#ikonkecil">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="ikonkecil">
-        <div class="navbar-nav ml-auto">
-          <a href="checkout.html" class="nav-link"><i class="bi bi-arrows-fullscreen"></i> Checkout</a>
-          <a href="cart.html" class="nav-link"><i class="bi bi-cart"></i> Cart</a>
-          <a href="login.html" class="nav-link"> <i class="bi bi-lock"></i> Log-in</a>
-          <span class="navbar-search">
-            <input type="text" class="form-control" placeholder="search">
-          </span>
+  <div class="gulir">
+    <div class="navbar-atas">
+      <div class="navbar navbar-expand-lg navbar-light gulir">
+        <a href="index.html" class="navbar-brand"><img src="images/header-removebg-preview.png" alt=""> </a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#ikonkecil">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="ikonkecil">
+          <div class="navbar-nav ml-auto">
+            <a href="checkout.html" class="nav-link"><i class="bi bi-arrows-fullscreen"></i> Checkout</a>
+            <a href="cart.html" class="nav-link"><i class="bi bi-cart"></i> Cart</a>
+            <a href="login.html" class="nav-link"> <i class="bi bi-lock"></i> Log-in</a>
+            <span class="navbar-search">
+              <input type="text" class="form-control" placeholder="search">
+            </span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="navbar-bawah">
-    <div class="navbar navbar-expand-lg navbar-light">
-      <div class="navbar-nav mr-auto">
-        <a href="index.html" class="nav-link active">Home</a>
-        <a href="contact.html" class="nav-link ">Contact</a>
+    <div class="navbar-bawah">
+      <div class="navbar navbar-expand-lg navbar-light ">
+        <div class="navbar-nav mr-auto">
+          <a href="index.html" class="nav-link active">Home</a>
+          <a href="contact.html" class="nav-link ">Contact</a>
+        </div>
+        <form action="" class="form-inline">
+          <input type="text" placeholder="search" class="form-control">
+        </form>
       </div>
-      <form action="" class="form-inline">
-        <input type="text" placeholder="search" class="form-control">
-      </form>
     </div>
   </div>
   <!-- slider -->
@@ -69,13 +71,13 @@
         <h1>Features Items</h1>
         <div class="row mb-sm-3">
           <div class="col-md">
-            <img src="images/buku1.jpeg" class="d-block w-100 img-thumbnail"" alt="">
+            <img src="images/buku1.jpeg" class="d-block w-100 img-thumbnail" alt="">
             <h2>Rp. 40.000</h2>
             <p>Buku 99 cahaya di langit eropa</p>
             <button class="btn btn-light"><i class="bi bi-cart"></i> Add to cart</button>
           </div>
           <div class="col-md">
-            <img src="images/buku2.jpeg" class="d-block w-100 img-thumbnail"" alt="">
+            <img src="images/buku2.jpeg" class="d-block w-100 img-thumbnail" alt="">
             <h2>Rp. 60.000</h2>
             <p>BUKU MORE MYSTERIES OF THE MAGIC HORSE</p>
             <button class="btn btn-light"><i class="bi bi-cart"></i> Add to cart</button>
@@ -90,13 +92,13 @@
 
         <div class="row mb-sm-3">
           <div class="col-md">
-            <img src="images/buku4.jpeg" class="d-block w-100 img-thumbnail"" alt="">
+            <img src="images/buku4.jpeg" class="d-block w-100 img-thumbnail" alt="">
             <h2>Rp. 40.000</h2>
             <p>Buku Glaze</p>
             <button class="btn btn-light"><i class="bi bi-cart"></i> Add to cart</button>
           </div>
           <div class="col-md">
-            <img src="images/buku5.jpeg" class="d-block w-100 img-thumbnail"" alt="">
+            <img src="images/buku5.jpeg" class="d-block w-100 img-thumbnail" alt="">
             <h2>Rp. 60.000</h2>
             <p>Buku the real iron man</p>
             <button class="btn btn-light"><i class="bi bi-cart"></i> Add to cart</button>
@@ -126,6 +128,8 @@
   </div>
 </div>
     <!-- Optional JavaScript; choose one of the two! -->
+    <script src="script.js">
+    </script>
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
